changing admin page

--- a/src/views/clinic-panel/pages/add-clinic/choose-center.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/choose-center.ejs
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="tm-steps">
         <div class="tm-step active">
-          Şirketiniz Adı
+          Merkezinizin Adı
           <div class="tm-s-steps">
             <div class="tm-s-step"></div>
             <div class="tm-s-step active"></div>
@@ -28,7 +28,7 @@
           <form class="tm-form-wide" autocomplete="off" onkeypress="return event.keyCode != 13;" >
             <div class="form-group">
               <label for="center-name">Merkezin Adını Girin</label>
-              <input type="text" class="form-control" id="companyName" name="companyName" placeholder="Şirket adını giriniz" />
+              <input type="text" class="form-control" id="companyName" name="companyName" placeholder="Merkez adını giriniz" />
             </div>
           </form>
 
