--- a/src/views/clinic-panel/pages/panel/payment-options.ejs
+++ b/src/views/clinic-panel/pages/panel/payment-options.ejs
@@ -21,50 +21,74 @@
                 <label class="form-check-label selected" for="flexCheckChecked"> SSK </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Banka Sigortalısı </label>
+                <input class="form-check-input" type="checkbox" value="" id="BankaSigortalısı" />
+                <label class="form-check-label" for="BankaSigortalısı"> Banka Sigortalısı </label>
               </div>
               <div class="inner-checkbox">
                 <div class="form-group not-border checkbox">
-                  <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-                  <label class="form-check-label selected" for="flexCheckChecked"> Garanti Bankası </label>
+                  <input class="form-check-input" type="checkbox" value="" id="Garanti_Bankası" checked />
+                  <label class="form-check-label selected" for="Garanti_Bankası"> Garanti Bankası </label>
                 </div>
                 <div class="form-group not-border checkbox">
-                  <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-                  <label class="form-check-label selected" for="flexCheckChecked"> Ziraat Bankası </label>
+                  <input class="form-check-input" type="checkbox" value="" id="Ziraat_Bankası" checked />
+                  <label class="form-check-label selected" for="Ziraat_Bankası"> Ziraat Bankası </label>
                 </div>
                 <div class="form-group not-border checkbox">
-                  <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-                  <label class="form-check-label selected" for="flexCheckChecked"> Akbank </label>
+                  <input class="form-check-input" type="checkbox" value="" id="Akbank" checked />
+                  <label class="form-check-label selected" for="Akbank"> Akbank </label>
                 </div>
                 <div class="form-group not-border checkbox">
-                  <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-                  <label class="form-check-label selected" for="flexCheckChecked"> Yapıkredi </label>
+                  <input class="form-check-input" type="checkbox" value="" id="Yapıkredi" checked />
+                  <label class="form-check-label selected" for="Yapıkredi"> Yapıkredi </label>
                 </div>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Yeşil Kart Sigortalısı </label>
+                <input class="form-check-input" type="checkbox" value="" id="Yeşil_Kart" />
+                <label class="form-check-label" for="Yeşil_Kart"> Yeşil Kart Sigortalısı </label>
+              </div> 
+              <div class="form-group not-border checkbox">
+                <input class="form-check-input" type="checkbox" value="" id="Özel_Sigortalı" />
+                <label class="form-check-label" for="Özel_Sigortalı"> Özel Sigortalı </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Yurtdışı Sigortalısı </label>
+                <input class="form-check-input" type="checkbox" value="" id="AOK" />
+                <label class="form-check-label" for="AOK"> AOK </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Özel Sigortalı </label>
+                <input class="form-check-input" type="checkbox" value="" id="BKK" />
+                <label class="form-check-label" for="BKK"> BKK </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> EHIC (Europan Health Insurance Card) </label>
+                <input class="form-check-input" type="checkbox" value="" id="TKK" />
+                <label class="form-check-label" for="TKK"> TKK </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Global Healt Insurance Card (GHIC) </label>
+                <input class="form-check-input" type="checkbox" value="" id="IKK" />
+                <label class="form-check-label" for="IKK"> IKK </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Diğer </label>
+                <input class="form-check-input" type="checkbox" value="" id="KNAPPSCHAFT" />
+                <label class="form-check-label" for="KNAPPSCHAFT"> KNAPPSCHAFT </label>
+              </div>
+              <div class="form-group not-border checkbox">
+                <input class="form-check-input" type="checkbox" value="" id="HKK" />
+                <label class="form-check-label" for="HKK"> HKK </label>
+              </div>
+              <div class="form-group not-border checkbox">
+                <input class="form-check-input" type="checkbox" value="" id="BARMER" />
+                <label class="form-check-label" for="BARMER"> BARMER </label>
+              </div>
+              <div class="form-group not-border checkbox">
+                <input class="form-check-input" type="checkbox" value="" id="EHIC" />
+                <label class="form-check-label" for="EHIC"> EHIC (Europan Health Insurance Card) </label>
+              </div>
+              <div class="form-group not-border checkbox">
+                <input class="form-check-input" type="checkbox" value="" id="GHIC" />
+                <label class="form-check-label" for="GHIC"> Global Healt Insurance Card (GHIC) </label>
+              </div>
+              <div class="form-group not-border checkbox">
+                <input class="form-check-input" type="checkbox" value="" id="Other" />
+                <label class="form-check-label" for="Other"> Diğer </label>
               </div>
               <div class="form-group explanation">
                 <input type="text" class="form-control" id="explanation1" placeholder="Açıklayınız" />
