changed center name

--- a/src/views/clinic-panel/pages/add-clinic/choose-center.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/choose-center.ejs
@@ -44,11 +44,11 @@
             <div class="tm-box-top">
               <div class="col d-flex align-items-start">
                 <div class="me-1"><img src="../user/img/clinic/attention.png" alt="Attention Icon" /></div>
-                <div class="tm-box-title text-dark">Şirketin haklarını tamamen size ait mi?</div>
+                <div class="tm-box-title text-dark">Merkezinizin Temsil Hakları Tamamen Size Ait mi?</div>
               </div>
             </div>
             <div class="tm-box-bottom">
-              <div>Seçmiş olduğunuz merkezin bütün haklarının size ait olduğunu bir sonraki adıma geçerek onaylamış olacaksınız. Bir yanlışlık olduğunu veyahut hakların size ait olmadığını düşünüyorsanız lütfen seçiminizi tekrar gözden geçirin.</div>
+              <div>Seçmiş olduğunuz merkezin yasal temsil haklarının size ait olduğunu bir sonraki adıma geçerek onaylamış olacaksınız. Bir yanlışlık olduğunu veyahut hakların size ait olmadığını düşünüyorsanız lütfen seçiminizi tekrar gözden geçirin.</div>
               <div>Merkezinizin size ait olduğunu doğrulayabilmemiz için bu bilgilerin eksiksiz ve doğru girilmesi gerekmektedir.</div>
               <div>Ruhsat üzerinde ki isimi birebir doğru yazdığınızdan emin olun.</div>
             </div>
