--- a/src/views/clinic-panel/pages/panel/properties-and-services.ejs
+++ b/src/views/clinic-panel/pages/panel/properties-and-services.ejs
@@ -105,7 +105,7 @@
                   </div>
                   <div class="form-group not-border checkbox">
                     <input class="form-check-input" type="checkbox" value="" id="patient_services" />
-                    <label class="form-check-label" for="patient_services"> Sedyeli Hasta Servisi </label>
+                    <label class="form-check-label" for="patient_services"> Sedyeli Hasta Asansörü </label>
                   </div>
                 </div>
                 <div class="form-box mt-4">
@@ -160,11 +160,7 @@
                   <div class="form-group not-border checkbox">
                     <input class="form-check-input" type="checkbox" value="" id="private_public" />
                     <label class="form-check-label" for="private_public"> Kamu Diyaliz Merkezi </label>
-                  </div>
-                  <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="private_universty" />
-                    <label class="form-check-label" for="private_universty"> Üniversite Diyaliz Merkezi </label>
-                  </div>
+                  </div> 
                 </div>
                 <div class="form-box">
                   <div class="title mt-4">Sigorta Durumu</div>
@@ -196,41 +192,7 @@
                     <label class="form-check-label" for="doctor"> Uzman Hekimli </label>
                   </div>
                 </div>
-                <div class="form-box">
-                  <div class="title mt-4">Diyaliz Cihazı Markaları</div>
-                  <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="Fresenius" checked />
-                    <label class="form-check-label selected" for="Fresenius"> Fresenius </label>
-                  </div>
-                  <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="BBraun" />
-                    <label class="form-check-label" for="BBraun"> BBraun Dialog+ </label>
-                  </div>
-                  <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="Gambro" />
-                    <label class="form-check-label" for="Gambro"> Gambro </label>
-                  </div>
-                  <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="Nipro" />
-                    <label class="form-check-label" for="Nipro"> Nipro Surdial </label>
-                  </div>
-                  <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="Kawasumi" checked />
-                    <label class="form-check-label selected" for="Kawasumi"> Kawasumi </label>
-                  </div>
-                  <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="Toray" />
-                    <label class="form-check-label" for="Toray"> Toray </label>
-                  </div>
-                  <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="Baxter" />
-                    <label class="form-check-label" for="Baxter"> Baxter </label>
-                  </div>
-                  <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="Nikkiso" />
-                    <label class="form-check-label" for="Nikkiso"> Nikkiso </label>
-                  </div>
-                </div>
+                
                 <div class="form-box">
                   <div class="title mt-4">Tercüman Hizmeti</div>
                   <div class="form-group not-border checkbox">
@@ -262,7 +224,7 @@
         </div>
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-4">
           <div class="tm-box-info">
-            <div class="tm-box-top">
+            <div class="tm-box-top input-group">
               <img src="../user/img/clinic/attention.png" alt="Attention Icon" />
               <div class="tm-box-title">Hizmetleri nelere göre işaretlemeliyim?</div>
             </div>
