--- a/src/views/admin/pages/add-blog.ejs
+++ b/src/views/admin/pages/add-blog.ejs
@@ -38,11 +38,16 @@
               </div>
             </div>
           </div>
+          <div class="form-group">
+            <div class="row"> 
+              <input type="file" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload">
+            </div>
+          </div>
           <button type="submit" class="btn btn-primary btn-space">Ekle</button>
         </form>
       </div>
       <div class="card-footer d-sm-flex">
-        <div class="mt-2 mb-2">
+        <!-- <div class="mt-2 mb-2">
           <a href="javascript:void(0)" class="btn btn-icon btn-white btn-svg" data-toggle="tooltip" title="" data-original-title="Attach"
             ><svg class="svg-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="100%" width="100%">
               <path d="M0 0h24v24H0V0z" fill="none" />
@@ -65,7 +70,7 @@
               <path d="M8 9h8v10H8z" opacity=".3" />
               <path d="M15.5 4l-1-1h-5l-1 1H5v2h14V4zM6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM8 9h8v10H8V9z" /></svg
           ></a>
-        </div>
+        </div> -->
         <div class="btn-list ml-auto">
           <button type="button" class="btn btn-danger btn-space">Vazgeç</button>
           
