--- a/src/views/user/pages/index.ejs
+++ b/src/views/user/pages/index.ejs
@@ -6,27 +6,29 @@
       <a href="./clinic/all" class="tm-show-all-link" key="allView">Tümünü Görüntüle</a>
     </div>
     <div class="row">
-      <% cities.forEach((city, index)=> { %> <% if (country==city._id.country) { %>
-          <% if (index < 5) { %>
-            <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
-              <div class="tm-box card">
-                <img src="../user/img/custom/istanbul-anadolu.png" alt="Custom Istanbul Anadolu" />
-                <div class="tm-box-content">
-                  <div class="tm-box-title"><a href="./clinic/clinic-list?city=<%- city._id.city %> ">
-                      <%- city._id.city %>
-                    </a></div>
-                  <div class="tm-box-text">
-                    <%- city.count %> <span key="dialysCenter">Diyaliz Merkezi</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <% } %>
+      <% cities.forEach((city, index)=> { %> <% if (country==city._id.country) { %> <% if (index < 5) { %> <% if (index<3) { %>
+      <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
+        <div class="tm-box card">
+          <img src="../user/img/custom/istanbul-anadolu.png" alt="Custom Istanbul Anadolu" />
+          <div class="tm-box-content">
+            <div class="tm-box-title"><a href="./clinic/clinic-list?city=<%- city._id.city %> "> <%- city._id.city %> </a></div>
+            <div class="tm-box-text"><%- city.count %> <span key="dialysCenter">Diyaliz Merkezi</span></div>
+          </div>
+        </div>
+      </div>
+      <% } else{ %>
+      <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+        <div class="tm-box card">
+          <img src="../user/img/custom/istanbul-anadolu.png" alt="Custom Istanbul Anadolu" />
+          <div class="tm-box-content">
+            <div class="tm-box-title"><a href="./clinic/clinic-list?city=<%- city._id.city %> "> <%- city._id.city %> </a></div>
+            <div class="tm-box-text"><%- city.count %> <span key="dialysCenter">Diyaliz Merkezi</span></div>
+          </div>
+        </div>
+      </div>
+      <% } %> <% } %> <% } %> <% }) %>
 
-              <% } %>
-                <% }) %>
-
-                  <!-- <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+      <!-- <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
         <div class="tm-box card">
           <img src="../user/img/custom/istanbul-avrupa.png" alt="Custom Istanbul Avrupa" />
           <div class="tm-box-content">
@@ -74,38 +76,28 @@
       <a key="allViewArticle" href="/blogs" class="tm-show-all-link">Tüm Makaleleri Görüntüle</a>
     </div>
     <div class="row">
-      <% blogs.forEach((blog, index)=> { %>
-        <% if (index < 3) { %>
-          <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
-            <div class="tm-box">
-              <a href="#"> <img src="../user/img/custom/dialysis-i.png" alt="Dialysis I" /></a>
-              <div class="tm-box-content">
-                <div key="articleSubTitle1" class="tm-box-title">
-                  <%- blog.title %>
-                </div>
-                <div key="articlesSubText1" class="tm-box-text">
-                  <%- blog.content.substring(0,58) %>
-                </div>
-              </div>
-            </div>
+      <% blogs.forEach((blog, index)=> { %> <% if (index < 3) { %>
+      <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
+        <div class="tm-box">
+          <a href="#"> <img src="../user/img/custom/dialysis-i.png" alt="Dialysis I" /></a>
+          <div class="tm-box-content">
+            <div key="articleSubTitle1" class="tm-box-title"><%- blog.title %></div>
+            <div key="articlesSubText1" class="tm-box-text"><%- blog.content.substring(0,58) %></div>
           </div>
-          <% } else { %>
-            <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
-              <div class="tm-box">
-                <a href="#"> <img src="../user/img/custom/dialysis-i.png" alt="Dialysis I" /></a>
-                <div class="tm-box-content">
-                  <div key="articleSubTitle1" class="tm-box-title">
-                    <%- blog.title %>
-                  </div>
-                  <div key="articlesSubText1" class="tm-box-text">
-                    <%- blog.content.substring(0,58) %>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <% } %>
-              <% }) %>
-                <!-- <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
+        </div>
+      </div>
+      <% } else { %>
+      <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+        <div class="tm-box">
+          <a href="#"> <img src="../user/img/custom/dialysis-i.png" alt="Dialysis I" /></a>
+          <div class="tm-box-content">
+            <div key="articleSubTitle1" class="tm-box-title"><%- blog.title %></div>
+            <div key="articlesSubText1" class="tm-box-text"><%- blog.content.substring(0,58) %></div>
+          </div>
+        </div>
+      </div>
+      <% } %> <% }) %>
+      <!-- <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
         <div class="tm-box">
           <a href="./articles/diyalizde-beslenme.html"><img src="../user/img/custom/dialysis-ii.png" alt="Dialysis II" /></a>
           <div class="tm-box-content">
@@ -132,17 +124,15 @@
           </div>
         </div>
       </div> -->
-                <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
-                  <div class="tm-box">
-                    <a href="/gfr-calculator"><img src="../user/img/custom/dialysis-v.png" alt="Dialysis V" /></a>
-                    <div class="tm-box-content">
-                      <div key="articleSubTitle5" class="tm-box-title">GFR Hesaplama</div>
-                      <div key="articlesSubText5" class="tm-box-text">Eget ut netus aliquet platea auctor volutpat est
-                        dictum mattis ac enim eget duis sit a, ac urna, tortor tincidunt mauris adipiscing facilisis
-                        ultricies aliquet sit imperdiet non sed lectus</div>
-                    </div>
-                  </div>
-                </div>
+      <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+        <div class="tm-box">
+          <a href="/gfr-calculator"><img src="../user/img/custom/dialysis-v.png" alt="Dialysis V" /></a>
+          <div class="tm-box-content">
+            <div key="articleSubTitle5" class="tm-box-title">GFR Hesaplama</div>
+            <div key="articlesSubText5" class="tm-box-text">Eget ut netus aliquet platea auctor volutpat est dictum mattis ac enim eget duis sit a, ac urna, tortor tincidunt mauris adipiscing facilisis ultricies aliquet sit imperdiet non sed lectus</div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
@@ -221,8 +211,7 @@
       <div class="col col-five">
         <div class="card">
           <div class="position-relative">
-            <a href="./clinic/clinic.html"><img src="../user/img/custom/center-i.png" class="image-fluid card-img-top"
-                width="100%" height="100%" alt="Custom Ankara" /></a>
+            <a href="./clinic/clinic.html"><img src="../user/img/custom/center-i.png" class="image-fluid card-img-top" width="100%" height="100%" alt="Custom Ankara" /></a>
             <div class="position-absolute bottom-0 start-0 px-2">
               <h5 class="tm-box-title">Türkmed</h5>
               <p key="suggestion" class="tm-box-text">Diyaliz Merkezi</p>
@@ -234,8 +223,7 @@
       <div class="col col-five">
         <div class="card">
           <div class="position-relative">
-            <img src="../user/img/custom/center-ii.png" class="image-fluid card-img-top" width="100%" height="100%"
-              alt="Custom Ankara" />
+            <img src="../user/img/custom/center-ii.png" class="image-fluid card-img-top" width="100%" height="100%" alt="Custom Ankara" />
             <div class="position-absolute bottom-0 start-0 px-2">
               <h5 class="tm-box-title">Sultanbeyli</h5>
               <p key="suggestion" class="tm-box-text">Diyaliz Merkezi</p>
@@ -247,8 +235,7 @@
       <div class="col col-five">
         <div class="card">
           <div class="position-relative">
-            <img src="../user/img/custom/center-iii.png" class="image-fluid card-img-top" width="100%" height="100%"
-              alt="Custom İstanbul - Avrupa" />
+            <img src="../user/img/custom/center-iii.png" class="image-fluid card-img-top" width="100%" height="100%" alt="Custom İstanbul - Avrupa" />
             <div class="position-absolute bottom-0 start-0 px-2">
               <h4 class="tm-box-title">Bodrum</h4>
               <p key="suggestion" class="tm-box-text">Diyaliz Merkezi</p>
@@ -260,8 +247,7 @@
       <div class="col col-five">
         <div class="card">
           <div class="position-relative">
-            <img src="../user/img/custom/center-iv.png" class="image-fluid card-img-top" width="100%" height="100%"
-              alt="Custom İstanbul - Anadolu" />
+            <img src="../user/img/custom/center-iv.png" class="image-fluid card-img-top" width="100%" height="100%" alt="Custom İstanbul - Anadolu" />
             <div class="position-absolute bottom-0 start-0 px-2">
               <h4 class="tm-box-title">Karşıyaka</h4>
               <p key="suggestion" class="tm-box-text">Diyaliz Merkezi</p>
@@ -273,8 +259,7 @@
       <div class="col col-five">
         <div class="card">
           <div class="position-relative">
-            <img src="../user/img/custom/center-v.png" class="image-fluid card-img-top" width="100%" height="100%"
-              alt="Custom Ankara" />
+            <img src="../user/img/custom/center-v.png" class="image-fluid card-img-top" width="100%" height="100%" alt="Custom Ankara" />
             <div class="position-absolute bottom-0 start-0 px-2">
               <h4 class="tm-box-title">Milas</h4>
               <p key="suggestion" class="tm-box-text">Diyaliz Merkezi</p>
@@ -294,9 +279,7 @@
         <div class="row">
           <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
             <div class="tm-box-with-content">
-              <div class="content" key="theread1">“Tatilimizi sağlıklı bir şekilde geçirmemizi sağladıkları için
-                dialysing.com ailesine sonsuz teşekkürler, daima kullanacağımız bir sistem oldu ve bizlerden tam puan
-                aldı. Diyaliz hastalarına tavsiye etmekten asla tereddüt etmeyeceğiz”.</div>
+              <div class="content" key="theread1">“Tatilimizi sağlıklı bir şekilde geçirmemizi sağladıkları için dialysing.com ailesine sonsuz teşekkürler, daima kullanacağımız bir sistem oldu ve bizlerden tam puan aldı. Diyaliz hastalarına tavsiye etmekten asla tereddüt etmeyeceğiz”.</div>
               <div class="tm-profile">
                 <img src="../user/img/profiles/profile1.png" alt="Profile 1" />
                 <div class="tm-personal-info">
@@ -308,9 +291,7 @@
           </div>
           <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
             <div class="tm-box-with-content">
-              <div class="content" key="theread2">“Memleketime gelirken diyaliz problemimi nasıl çözeceğimi
-                düşünüyordum ve websitenize denk geldim. Bundan sonra dilediğim zaman aklımda hiç soru işareti
-                kalmadan memleketime gelebileceğim için çok mutluyum, iyi ki böyle bir sistem oluşturmuşsunuz”.</div>
+              <div class="content" key="theread2">“Memleketime gelirken diyaliz problemimi nasıl çözeceğimi düşünüyordum ve websitenize denk geldim. Bundan sonra dilediğim zaman aklımda hiç soru işareti kalmadan memleketime gelebileceğim için çok mutluyum, iyi ki böyle bir sistem oluşturmuşsunuz”.</div>
               <div class="tm-profile">
                 <img src="../user/img/profiles/profile2.png" alt="Profile 2" />
                 <div class="tm-personal-info">
@@ -327,8 +308,7 @@
           <img src="../user/img/icons/quote-top.png" alt="Quote Top" class="quote-icon-top" />
           <div class="inner-content">
             <div class="tm-section-title" key="thereadTitle">Önemli olan sizsiniz ve biz sizler için buradayız.</div>
-            <div class="text" key="thereadText">Güvenilir uzman kadromuz ve altyapımız ile diyaliz merkezi ve tatil
-              diyalizi lokasyon aramalarınızda hizmetinizdeyiz.</div>
+            <div class="text" key="thereadText">Güvenilir uzman kadromuz ve altyapımız ile diyaliz merkezi ve tatil diyalizi lokasyon aramalarınızda hizmetinizdeyiz.</div>
           </div>
           <img src="../user/img/icons/quote-bottom.png" alt="Quote Bottom" class="quote-icon-bottom" />
         </div>
@@ -473,10 +453,8 @@
   <div class="container">
     <div class="row align-items-center justify-content-between">
       <div class="col-lg p-3">
-        <div key="addTitle" class="tm-section-title">Ücretsiz olarak kliniğinizi sistemimize dahil ederek bizler ile
-          çalışmak ister misiniz?</div>
-        <div key="addText" class="tm-text">Sizlerde kliniğinizi sistemimize dahil ederek <span>Dialysing.com</span>
-          ailesine katılıp, hastalarınıza direkt hizmet vermeye başlayabilirsiniz.</div>
+        <div key="addTitle" class="tm-section-title">Ücretsiz olarak kliniğinizi sistemimize dahil ederek bizler ile çalışmak ister misiniz?</div>
+        <div key="addText" class="tm-text">Sizlerde kliniğinizi sistemimize dahil ederek <span>Dialysing.com</span> ailesine katılıp, hastalarınıza direkt hizmet vermeye başlayabilirsiniz.</div>
         <div><a href="/clinic" key="addCenterDialys" class="btn-second">Diyaliz Merkezinizi Ekleyin</a></div>
       </div>
       <div class="col-md">
@@ -493,9 +471,7 @@
       <div class="col text-center">
         <h2 key="growTitle" class="tm-section-title">Güveninizle büyüyoruz!</h2>
         <p key="growText" class="tm-text tm-font-semibold px-5 pr-5">
-          40+ ülkede yer alan 10000’nin üzerinde diyaliz merkezi ve kliniğinde, 20+ dilde hizmet alarak kolayca ve
-          güvenli şekilde diyaliz rezervasyonunuzu <span class="tm-color-second tm-font-semibold">Dialysing<span
-              class="tm-color-primary">.com</span></span> ile yapabilirsiniz
+          40+ ülkede yer alan 10000’nin üzerinde diyaliz merkezi ve kliniğinde, 20+ dilde hizmet alarak kolayca ve güvenli şekilde diyaliz rezervasyonunuzu <span class="tm-color-second tm-font-semibold">Dialysing<span class="tm-color-primary">.com</span></span> ile yapabilirsiniz
         </p>
         <div class="tm-center">
           <div class="circle">
@@ -535,13 +511,11 @@
   <div class="container tm-p-4">
     <div class="row">
       <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-        <div class="tm-text-white mb-3" key="newsletterText">Son gelişmelerden ve diyaliz fırsatlarından haberdar
-          olabilmek için mail listemize abone olabilirsiniz.</div>
+        <div class="tm-text-white mb-3" key="newsletterText">Son gelişmelerden ve diyaliz fırsatlarından haberdar olabilmek için mail listemize abone olabilirsiniz.</div>
       </div>
       <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-2">
         <div class="form-group bottom blue-input text-center">
-          <input name="check-in" type="text" class="form-control" id="inputCheckIn"
-            placeholder="dialysing@demo.com.tr" />
+          <input name="check-in" type="text" class="form-control" id="inputCheckIn" placeholder="dialysing@demo.com.tr" />
           <img src="../user/img/icons/arrow.png" class="mt-0" alt="Icon Arrow" />
         </div>
       </div>
