--- a/src/views/admin/pages/blogs.ejs
+++ b/src/views/admin/pages/blogs.ejs
@@ -33,7 +33,7 @@
       </div>
       <div class="item7-card-img px-4">
         <a href="#"></a>
-        <img src="../admin/images/photos/1.jpg" alt="img" class="cover-image br-7" />
+        <img src="../uploads/blog-images/<%- blog.image %>" alt="img" class="cover-image br-7" />
       </div>
       <div class="card-body">
         <div class="item7-card-desc d-flex mb-5">
