removed circle question icon in navbar

--- a/src/views/user/partials/clinic-list-navbar.ejs
+++ b/src/views/user/partials/clinic-list-navbar.ejs
@@ -71,9 +71,9 @@
                 <a class="dropdown-item" id="en" href="#"><div class="input-group select-lang mb-2"><img key="flag" src="../user/img/flags/en.png" class="mx-1" alt="Flags Turkey" /> English </div></a>
               </div>
             </div>
-            <li class="nav-item question mt-2 mb-3">
+            <!-- <li class="nav-item question mt-2 mb-3">
               <img src="../user/img/icons/question.png" alt="Icons Question" />
-            </li>
+            </li> -->
             <li class="nav-item buttons mt-2 mb-3">
               <a href="/clinic" key="addCenter" class="nav-link btn-third">Merkezinizi Ekleyin</a>
             </li>
