--- a/src/views/user/partials/index-navbar.ejs
+++ b/src/views/user/partials/index-navbar.ejs
@@ -83,9 +83,9 @@
                   </a>
                 </div>
               </div>
-              <li class="nav-item question mt-2 mb-3">
+              <!-- <li class="nav-item question mt-2 mb-3">
                 <img src="../user/img/icons/question.png" alt="Icons Question" />
-              </li>
+              </li> -->
               <li class="nav-item buttons mt-2 mb-3">
                 <a href="/clinic" key="addCenter" class="nav-link btn-third">Merkezinizi Ekleyin</a>
               </li>
