--- a/src/views/user/partials/navbar.ejs
+++ b/src/views/user/partials/navbar.ejs
@@ -74,7 +74,7 @@
               </div>
             </li>
             <li class="nav-item question mt-3 mb-3">
-              <img src="../user/img/icons/question.png" alt="Icons Question" />
+              <!-- <img src="../user/img/icons/question.png" alt="Icons Question" /> -->
               <div class="is-clinic mr-3">Klinik Hesabınız Var Mı?</div>
             </li>
             <% if (user) { %>
