--- a/src/views/user/partials/top-navbar-dark.ejs
+++ b/src/views/user/partials/top-navbar-dark.ejs
@@ -73,9 +73,9 @@
                 </select>
               </div>
             </li>
-            <li class="nav-item question mb-3 mt-3">
+            <!-- <li class="nav-item question mb-3 mt-3">
               <img src="../user/img/icons/question.png" alt="Icons Question" />
-            </li>
+            </li> -->
             <li class="nav-item buttons mb-3 mt-3">
               <a href="/clinic" class="nav-link btn-third">Merkezinizi Ekleyin</a>
             </li>
