--- a/src/views/clinic-panel/partials/navbar.ejs
+++ b/src/views/clinic-panel/partials/navbar.ejs
@@ -86,9 +86,9 @@
                 
               </a>
             </li>
-            <li class="nav-item question mx-2 mt-2">
+            <!-- <li class="nav-item question mx-2 mt-2">
               <img src="../user/img/icons/question.png" alt="Icons Question" />
-            </li>
+            </li> -->
             <li class="nav-item buttons mx-2 mt-2">
               <a href="/panel" class="nav-link btn-third">Merkezinizi Ekleyin</a>
             </li>
