--- a/src/views/user/partials/top-navbar-blog.ejs
+++ b/src/views/user/partials/top-navbar-blog.ejs
@@ -23,9 +23,9 @@
                                         </select>
                                     </div>
                                 </li>
-                                <li class="nav-item question mb-3">
+                                <!-- <li class="nav-item question mb-3">
                                     <img src="../user/img/icons/question.png" alt="Icons Question" />
-                                </li>
+                                </li> -->
                                 <li class="nav-item buttons mb-3">
                                     <a class="nav-link btn-third">Merkezinizi Ekleyin</a>
                                 </li>
