--- a/src/views/user/partials/top-navbar.ejs
+++ b/src/views/user/partials/top-navbar.ejs
@@ -79,9 +79,9 @@
             </div>
           </div>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a href="#" class="question nav-link mt-2"><i class="bi bi-question-circle"></i></a>
-        </li>
+        </li> -->
         <li class="nav-item"><button href="#" class="nav-link btn-third btn-outline-light mx-2 mt-2">Merkezinizi
             Ekleyin</button></li>
         <% if (!user) { %>
